fix shadow on safari mobile

--- a/app/javascript/components/payment/style.less
+++ b/app/javascript/components/payment/style.less
@@ -85,6 +85,7 @@
   box-sizing: border-box;
   border-radius: 6px;
   padding: 10px;
+  box-shadow: none !important;
 }
 
 .vote-payment__button {
